docker-k8s-workshop/day3/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-clusterip
  labels:
    app: hello-world-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: hello-world-api
