docker-k8s-workshop/day3/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-nodeport
  labels:
    app: hello-world-api
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: hello-world-api
