docker-k8s-workshop/day3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info  # This is a placeholder hostname
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-world-api-clusterip
            port:
              number: 80
      - path: /status(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-world-api-clusterip
            port:
              number: 80
